Add user get must request
